<resources>
    <string name="app_name">AppListaCurso</string>
    <string name="txt_titulo_app">Aplicativo Lista</string>
    <string name="txt_hint_primeiro_nome">Primeiro Nome</string>
    <string name="txt_hint_sobrenome">Sobrenome</string>
    <string name="txt_hint_telefone_contato">Telefone de Contato</string>
    <string name="txt_hint_nome_curso">Nome do Curso</string>
    <string name="txt_button_limpar">Limpar</string>
    <string name="txt_button_salvar">Salvar</string>
    <string name="txt_button_finalizar">Finalizar</string>
</resources>